# Pi-Box

./: .gitignore  Pi-Box.bak  Pi-Box.dwg  Pi-Box.dwl  Pi-Box.dwl2  Pi-Box.rtf  README.md  raspberry-pi-3-b-mechanical-drawing.dwg
code/rev1/: CMakeLists.txt  TODO.md  Temp.c
code/rev1/src/: Config.c  Config.h  config.ini  main.c  window.c  window.h
code/rev1/src/gpio/: gpio.c  gpio.h
code/rev1/ui/: Pi-Box.glade  pi-box.ui  window.ui
